v0.8.0/_sources/tutorial/install.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorial/install.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorial_install.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorial_install.py:


Installing TVM
==============
**Authors**:
`Jocelyn Shiue <https://github.com/>`_,
`Chris Hoge <https://github.com/hogepodge>`_

Depending on your needs and your working environment, there are a few different
methods for installing TVM. These include:

* Installing from source
* Installing from third-party binary package.

.. GENERATED FROM PYTHON SOURCE LINES 32-40

Installing from Source
----------------------
Installing from source is the recommended method for installing TVM. It will
allow you to enable specific features such as GPU support, microcontroller
support (microTVM), and a debugging runtime, and other features. You will also
want to install from source if you want to actively contribute to the TVM
project. The full instructions are on the :ref:`Install TVM From Source
<install-from-source>` page.

.. GENERATED FROM PYTHON SOURCE LINES 42-51

Installing From Binary Packages
--------------------------------
You may install convenient third-party binary package distributions to
quickly try things out. TLCPack is a thirdparty volunteer community that
builds binary packages from TVM source. It offers support matrix with
instructions to install on different platforms, with different features.
Checkout  `TLCPack <https://tlcpack.ai>`_ to learn more. Note that the
thirdparty binary packages could contain additional licensing terms for
the hardware drivers that are bundled with it.


.. _sphx_glr_download_tutorial_install.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: install.py <install.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: install.ipynb <install.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
